--- a/public/about/index.html
+++ b/public/about/index.html
@@ -610,7 +610,7 @@
 
  
         </a>
-        <p class="text-light mb-4">Software Development, Artificial Intelligence and Computer Vision.</p>
+        <p class="text-light mb-4">All post are written based on my own experience with no warranties, confers no rights and is not supported by the authors.</p>
         <ul class="list-unstyled mb-5 footer-menu">
           
           <li class="list-inline-item">
