--- a/public/search/index.html
+++ b/public/search/index.html
@@ -9,8 +9,6 @@
 
 
 
-<base href="https://aicurious.io">
-
 
 
 
@@ -47,7 +45,7 @@
 <meta property="og:title" content="Search Result" />
 <meta property="og:description" content="this is meta description" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://aicurious.io/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="/search/" /><meta property="article:section" content="" />
 
 
 
