--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,8 +9,6 @@
 
 
 
-<base href="https://aicurious.io">
-
 
 
 
@@ -47,7 +45,7 @@
 <meta property="og:title" content="About The Author" />
 <meta property="og:description" content="this is meta-description" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://aicurious.io/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="/about/" /><meta property="article:section" content="" />
 
 
 
