--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -9,8 +9,6 @@
 
 
 
-<base href="https://aicurious.io">
-
 
 
 
@@ -47,7 +45,7 @@
 <meta property="og:title" content="Let&#39;s, Talk About You" />
 <meta property="og:description" content="this is meta-description" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://aicurious.io/contact/" /><meta property="article:section" content="" />
+<meta property="og:url" content="/contact/" /><meta property="article:section" content="" />
 
 
 
